--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 REACT_APP_GITHUB_URL = "https://api.github.com"
-REACT_APP_GITHUB_TOKEN="ADD_YOUR_TOKEN"
+REACT_APP_GITHUB_TOKEN="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"
